2007-03-09  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Auto-detect all available subclasses
	* SelfUpdate/Base.pm: Add method_name and desc_short to public API
	* SelfUpdate.pm, SelfUpdate/*: Use each method's own descriptions

2007-03-08  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm, SelfUpdate/CVS.pm: Offload cvs stuff into its own
	class

2007-03-08  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/Base.pm: add system_check to public API
	* SelfUpdate.pm, SelfUpdate/*: let each method handle its own
	system sanity-checking; nuke &SU::need_devtools

2007-03-08  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: completely redo check(), removing most
	special-case method tests
	* SelfUpdate.pm, SelfUpdate/*: remove all cross-method interactions

2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm, SelfUpdate/*: clean up imports from other pkgs

2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/Base.pm: add do_direct to public API
	* SelfUpdate.pm, SelfUpdate/rsync.pm: migrate &SU::do_direct_rsync
	to SU::rsync->do_direct
	* Selfupdate.pm, SelfUpdate/point.pm: Consolidate all
	tarball/point stuff related to &SU::do_tarball, migrate it to
	SU::tarball->do_direct
	* SelfUpdate.pm: Misc cleanups

2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/tarball.pm: delete (redundant vs "point" method)

2007-03-06  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/CVS.pm, SelfUpdate/rsync.pm: missing inclusion

2007-03-06  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm, SelfUpdate/*.pm: Use SU::Base instead of SU as
	base class for SU::$method classes

2007-03-06  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Use text-string params for check().
	* SelfUpdate.pm, SelfUpdate/*.pm: Offload handling of stamp files
	and removal of orphaned metadata into the method-specific classes.

2007-03-04  Dave Morrison  <drm@finkproject.org>

	* FinkVersion.pm.in, PkgVersion.pm, Validation.pm: implement Info4
