@@ -1,3 +1,12 @@
+2007-03-19  Daniel Macks  <dmacks@netspace.org>
+
+	* Config.pm: Add fink.conf:Distribution to 'fink -V' output.
+	* FinkVersion.pm.in: Try asking SelfUpdate about package-distro
+	versioning, which would add selfupdate method and timestamp data
+	to 'fink -V' output.
+	* SelfUpdate.pm, SelfUpdate/rsync.pm: Unified and overhauled
+	handling of %p/fink/$dist/VERSION file.
+
 2007-03-09  Daniel Macks  <dmacks@netspace.org>
 
 	* SelfUpdate.pm: Auto-detect all available subclasses
